<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ToDo App</string>
    <string name="settings">Settings</string>
    <string name="tasks">Tasks</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="add_new_task">Add new Task</string>
    <string name="task_name">Enter Your Task</string>
    <string name="enter_your_task_details">enter your task details</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="add_task">Save</string>
    <string name="to_do_list">To Do List</string>
    <string name="done">Done!</string>
    <string name="please_select_date">Please Select Date</string>
    <string name="please_select_time">Please Select Time</string>
    <string name="edit_task">Edit Task</string>
    <string name="this_is_title">This is title</string>
    <string name="task_details">Task details</string>
    <string name="save_changes">Save Changes</string>
    <string name="select_an_option">Select an option</string>

    <string-array name="Lang">
        <item>Arabic</item>
        <item>English</item>
    </string-array>

    <string-array name="Mode">
        <item>Light</item>
        <item>Night</item>
    </string-array>
</resources>