<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/DialogsBackground"
    tools:context=".fragments.AddingBottomSheetFragment">

    <TextView
        android:id="@+id/addtaskid"
        style="@style/LargeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_new_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tasknameid"
        style="@style/LargeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:hint="@string/task_name"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addtaskid" />

    <EditText
        android:id="@+id/taskdescriptionid"
        style="@style/LargeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:gravity="top"
        android:hint="@string/enter_your_task_details"
        android:lines="2"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tasknameid" />

    <TextView
        android:id="@+id/SelectDate_tv"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_18sdp"
        android:text="@string/select_date"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskdescriptionid" />

    <TextView
        android:id="@+id/PleaseDate_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/please_select_date"
        android:textColor="@color/grey"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SelectDate_tv" />

    <TextView
        android:id="@+id/SelectTime_tv"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_18sdp"
        android:text="@string/select_time"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PleaseDate_tv" />

    <TextView
        android:id="@+id/PleaseTime_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/please_select_time"
        android:textColor="@color/grey"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SelectTime_tv" />

    <Button
        android:id="@+id/AddingButton"
        style="@style/SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_18sdp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/add_task"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PleaseTime_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>