<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/DialogsBackground"
    tools:context=".fragments.EditTaskDialogFragment">
    <TextView
        android:id="@+id/Task_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_task"
        android:textAlignment="center"
        style="@style/MediumText"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/title_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Task_tv"
        android:hint="@string/this_is_title"
        style="@style/SmallText"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_18sdp"/>
    <EditText
        android:id="@+id/details_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_et"
        android:hint="@string/task_details"
        style="@style/SmallText"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_18sdp"/>

    <TextView
        android:id="@+id/SelectTime_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_time"
        style="@style/SmallText"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toBottomOf="@id/details_et"
        android:layout_marginTop="@dimen/_18sdp"/>

    <TextView
        android:id="@+id/Time_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_select_time"
        android:textColor="@color/grey"
        android:textAlignment="center"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toBottomOf="@id/SelectTime_tv"
        android:layout_marginTop="@dimen/_18sdp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        android:padding="@dimen/_10sdp"
        app:cornerRadius="@dimen/_18sdp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue"
        android:text="@string/save_changes"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/Time_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="@dimen/_60sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>