<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.2"
        android:background="@color/light_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/Settings_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/_22ssp"
            android:paddingHorizontal="@dimen/_10sdp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/Language_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:text="@string/language"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingTop="@dimen/_15sdp"
        android:textSize="@dimen/_15ssp"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/Spinner_Lang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/Language_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="@dimen/_15sdp" />

    <TextView
        android:id="@+id/Mode_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Spinner_Lang"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/mode"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingHorizontal="@dimen/_25sdp"
        android:paddingTop="@dimen/_15sdp"
        android:textSize="@dimen/_15ssp"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/Spinner_Mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/Mode_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="@dimen/_15sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>